[tool.poetry]
name = "oks-lab1"
version = "0.1.0"
description = ""
authors = ["Anastasia <anastasia.shkelyonok@gmail.com>"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "==3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
